# gfk

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: generate_keys.py  rnd_keys.npy
experiments/runs_gms/: aux.py  bash_aux.sh  bash_aux_noiseless.sh  bash_mcgdiff.sh  bash_wu.sh  mcgdiff.py  wu.py
experiments/scratches/: fk.py  fk_tme.py  fk_tme_gsb.py  fk_tme_gsb_fwd_ll.py  fk_tme_gsb_wu.py
experiments/scratches_gms/: aux.py  aux_bridge.py  aux_seq_lin.py  bridge.py  vis_aux.py  vis_aux_bridge.py  vis_gms.py  vis_mcgdiff.py  vis_wu-fili-test.py  vis_wu.py  wu.py
experiments/scratches_normal/: vis_pushfwd_err.py
experiments/summary/: plot_ess.py  plot_geometry_aux.py  plot_geometry_wu.py  plot_posterior.py  tabulate_gms.py
gfk/: ddpm.py  dsb.py  experiments.py  feynman_kac.py  filters.py  likelihoods.py  resampling.py  synthetic_targets.py  tools.py  typings.py
gfk/nns/: __init__.py  base.py  mlps.py
mcgdiff/: LICENSE  particle_filter.py
tests/: test_ddpm.py  test_dsb.py  test_fk.py  test_likelihoods.py  test_targets.py  test_tools.py
