[build-system]
requires = ['setuptools >= 75.2.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['gfk']

[project]
name = 'gfk'
version = '0.0.1'
authors = [
    { name='Zheng Zhao', email='zz@zabemon.com' },
]
description = 'Efficient proposals in '
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Mathematics'
]
keywords = ['Markov models']
dependencies = [
    'numpy==2.1.2',
    'jax==0.4.35',
    'jaxlib==0.4.35',
    'scipy==1.14.1',
    'matplotlib==3.9.2',
    'flax==0.10.0',
    'tme==0.2.0',
    'ott-jax==0.4.9'
]

[project.urls]
homepage = 'https://github.com/zgbkdlm/gfk'
documentation = 'https://github.com/zgbkdlm/gfk'
repository = 'https://github.com/zgbkdlm/gfk'

